--- a/frontend-mobile/src/theme/index.css
+++ b/frontend-mobile/src/theme/index.css
@@ -12,6 +12,13 @@
     align-items: center;
 }
 
+.status-bar-spacer {
+    width: 100%;
+    height: 20px;
+    /* Adjust this value as needed */
+    background: var(--color-white);
+}
+
 .top-bar-title-margin {
     margin-left: 10px;
 }
